# vosk-cymraeg

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.yaml  howto.md  pyproject.toml  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
data/: .gitignore
recipes/: .gitignore
recipes/cy/: copy_final_result.sh  howto.txt  run.sh
recipes/cy/local/chain/: run_tdnn_1j.sh  run_tdnn_1j_lay12.sh  run_tdnn_1j_lay12_ep30.sh  run_tdnn_1j_lay13.sh  run_tdnn_1j_lay13_ep30.sh  run_tdnn_1j_lay13_ep30_lr1-3.sh  run_tdnn_break_step13.sh
recipes/cy/local/chain2/: run_tdnn_nogpu.sh
recipes/cy/local/nnet3/: run_ivector_common.sh
src/vosk_cymraeg/: __init__.py  llef_py3.py  normalisation.py  utils.py
src/vosk_cymraeg/datasets/: banc_trawsgrifiadau_bangor.py  common_voice.py  enwau_cymraeg.py  hf_utils.py  lleisiau_arfor.py  techiaith_text.py
src/vosk_cymraeg/phonetics/: llef_py3.py  phonemizer.py
src/vosk_cymraeg/scripts/: combine_datasets.py  evaluate_bias.py  evaluate_model.py  export_kaldi.py  fetch_datasets.py  test_model.py  translate_predictions.py
